Replaces the push of the image by using images in cloudbuild and updates Google SDK to 345.0.0

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -7,12 +7,8 @@ steps:
     'gcr.io/world-fishing-827/github.com/globalfishingwatch/gfw-pipeline:latest',
     '.'
   ]
-  waitFor: ['-']
 
-- name: 'gcr.io/cloud-builders/docker'
-  args: [
-    'push',
-    'gcr.io/world-fishing-827/github.com/globalfishingwatch/gfw-pipeline:latest',
-  ]
+images:
+  - 'gcr.io/world-fishing-827/github.com/globalfishingwatch/gfw-pipeline:latest'
 
 timeout: 7200s
