--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -54,7 +54,7 @@ steps:
     'gcr.io/$PROJECT_ID/github.com/globalfishingwatch/gfw-pipeline:latest-python3.9',
     'us-east4-docker.pkg.dev/world-fishing-827/prj-ocean-soundscape/gfw-pipeline:latest-python3.9'
   ]
-  waitFor: ['-']
+  waitFor: ['python3.9']
 
 substitutions:
   _CLOUD_SDK_VERSION: '353.0.0'
