--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -32,17 +32,11 @@ steps:
     'CLOUD_SDK_VERSION=${_CLOUD_SDK_VERSION}',
     '-t',
     'gcr.io/$PROJECT_ID/github.com/globalfishingwatch/gfw-pipeline:latest-python3.8',
+    '-t',
+    'us-east4-docker.pkg.dev/world-fishing-827/prj-ocean-soundscape/gfw-pipeline:latest-python3.8',
     'python3.8/'
   ]
   waitFor: ['-']
-- name: 'gcr.io/cloud-builders/docker'
-  id: python3.8-tag
-  args: [
-    'tag',
-    'gcr.io/$PROJECT_ID/github.com/globalfishingwatch/gfw-pipeline:latest-python3.8',
-    'us-east4-docker.pkg.dev/world-fishing-827/prj-ocean-soundscape/gfw-pipeline:latest-python3.8'
-  ]
-  waitFor: ['python3.8']
 
 - name: 'gcr.io/cloud-builders/docker'
   id: python3.9
@@ -52,17 +46,25 @@ steps:
     'CLOUD_SDK_VERSION=${_CLOUD_SDK_VERSION}',
     '-t',
     'gcr.io/$PROJECT_ID/github.com/globalfishingwatch/gfw-pipeline:latest-python3.9',
+    '-t',
+    'us-east4-docker.pkg.dev/world-fishing-827/prj-ocean-soundscape/gfw-pipeline:latest-python3.9',
     'python3.9/'
   ]
   waitFor: ['-']
+
 - name: 'gcr.io/cloud-builders/docker'
-  id: python3.9-tag
+  id: python3.10
   args: [
-    'tag',
-    'gcr.io/$PROJECT_ID/github.com/globalfishingwatch/gfw-pipeline:latest-python3.9',
-    'us-east4-docker.pkg.dev/world-fishing-827/prj-ocean-soundscape/gfw-pipeline:latest-python3.9'
+    'build',
+    '--build-arg',
+    'CLOUD_SDK_VERSION=${_CLOUD_SDK_VERSION}',
+    '-t',
+    'gcr.io/$PROJECT_ID/github.com/globalfishingwatch/gfw-pipeline:latest-python3.10',
+    '-t',
+    'us-east4-docker.pkg.dev/world-fishing-827/prj-ocean-soundscape/gfw-pipeline:latest-python3.10',
+    'python3.10/'
   ]
-  waitFor: ['python3.9']
+  waitFor: ['-']
 
 substitutions:
   _CLOUD_SDK_VERSION: '387.0.0'
@@ -72,7 +74,9 @@ images:
   - 'gcr.io/$PROJECT_ID/github.com/globalfishingwatch/gfw-pipeline:latest-python3.7'
   - 'gcr.io/$PROJECT_ID/github.com/globalfishingwatch/gfw-pipeline:latest-python3.8'
   - 'gcr.io/$PROJECT_ID/github.com/globalfishingwatch/gfw-pipeline:latest-python3.9'
-  - 'us-east4-docker.pkg.dev/world-fishing-827/prj-ocean-soundscape/gfw-pipeline:latest-python3.9'
+  - 'gcr.io/$PROJECT_ID/github.com/globalfishingwatch/gfw-pipeline:latest-python3.10'
   - 'us-east4-docker.pkg.dev/world-fishing-827/prj-ocean-soundscape/gfw-pipeline:latest-python3.8'
+  - 'us-east4-docker.pkg.dev/world-fishing-827/prj-ocean-soundscape/gfw-pipeline:latest-python3.9'
+  - 'us-east4-docker.pkg.dev/world-fishing-827/prj-ocean-soundscape/gfw-pipeline:latest-python3.10'
 
 timeout: 7200s
