Adds python 3.11 support for gfw-pipeline

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -66,6 +66,20 @@ steps:
   ]
   waitFor: ['-']
 
+- name: 'gcr.io/cloud-builders/docker'
+  id: python3.11
+  args: [
+    'build',
+    '--build-arg',
+    'CLOUD_SDK_VERSION=${_CLOUD_SDK_VERSION}',
+    '-t',
+    'gcr.io/$PROJECT_ID/github.com/globalfishingwatch/gfw-pipeline:latest-python3.11',
+    '-t',
+    'us-east4-docker.pkg.dev/world-fishing-827/prj-ocean-soundscape/gfw-pipeline:latest-python3.11',
+    'python3.11/'
+  ]
+  waitFor: ['-']
+
 substitutions:
   _CLOUD_SDK_VERSION: '410.0.0'
 
@@ -75,8 +89,10 @@ images:
   - 'gcr.io/$PROJECT_ID/github.com/globalfishingwatch/gfw-pipeline:latest-python3.8'
   - 'gcr.io/$PROJECT_ID/github.com/globalfishingwatch/gfw-pipeline:latest-python3.9'
   - 'gcr.io/$PROJECT_ID/github.com/globalfishingwatch/gfw-pipeline:latest-python3.10'
+  - 'gcr.io/$PROJECT_ID/github.com/globalfishingwatch/gfw-pipeline:latest-python3.11'
   - 'us-east4-docker.pkg.dev/world-fishing-827/prj-ocean-soundscape/gfw-pipeline:latest-python3.8'
   - 'us-east4-docker.pkg.dev/world-fishing-827/prj-ocean-soundscape/gfw-pipeline:latest-python3.9'
   - 'us-east4-docker.pkg.dev/world-fishing-827/prj-ocean-soundscape/gfw-pipeline:latest-python3.10'
+  - 'us-east4-docker.pkg.dev/world-fishing-827/prj-ocean-soundscape/gfw-pipeline:latest-python3.11'
 
 timeout: 7200s
