--- a/python/Dockerfile
+++ b/python/Dockerfile
@@ -18,6 +18,7 @@ RUN  \
   apt-get -qqy update && \
   apt-get -qqy dist-upgrade && \
   apt-get install -qqy $CLOUD_SDK_APT_DEPS $BACKWARDS_COMPAT_TOOLS && \
+  pip install -U pip && \
   pip install -U $CLOUD_SDK_PIP_DEPS && \
   pip install -U "setuptools" && \
   curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | gpg --dearmor -o /usr/share/keyrings/cloud.google.gpg && \
